(lang dune 3.19)

(name st-list)

(generate_opam_files false)

(source
 (github xxlist/st-list))

(authors "Author xxlist")

(maintainers "Maintainer xxlist")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name st-list)
 (synopsis "a m3u generator for stripchat")
 (description "a m3u generator for stripchat")
 (depends ocaml)
 (tags
  ("stripchat" "m3u")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
